Scroll the find position last so that it is not overriden by another intermediate scrolling, b=242056, r=akkana, sr=jst